--- a/StoreSearch/en.lproj/InfoPlist.strings
+++ b/StoreSearch/en.lproj/InfoPlist.strings
@@ -5,3 +5,4 @@
   Created by Tom Murray on 03/03/2018.
   Copyright © 2018 Tom Murray. All rights reserved.
 */
+CFBundleDisplayName = "StoreSearch";
